# aoc2023

./: .gitignore  aoc2023.cabal  stack.yaml
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  InputData.hs  Parsers.hs
test/: Day01Spec.hs  Day02Spec.hs
